--- a/app/src/main/res/menu/stop_details_destination_menu.xml
+++ b/app/src/main/res/menu/stop_details_destination_menu.xml
@@ -3,6 +3,12 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+            android:id="@+id/item_directions"
+            android:icon="@drawable/ic_directions_on_primary_24dp"
+            android:title="@string/refresh_menu_item"
+            app:showAsAction="ifRoom"/>
+
+    <item
             android:id="@+id/item_refresh"
             android:icon="@drawable/ic_refresh_on_primary_24dp"
             android:title="@string/refresh_menu_item"
