Added Web Views to app for twitter timelines, line schedules and more. Added line schedules to line details with javascript injection to clean the page from extra content

--- a/app/src/main/res/navigation/favorites_destination.xml
+++ b/app/src/main/res/navigation/favorites_destination.xml
@@ -49,5 +49,24 @@
         <action
                 android:id="@id/action_lineDetails_to_stopDetails"
                 app:destination="@id/stopDetails"/>
+        <action
+                android:id="@+id/action_lineDetails_to_webView"
+                app:destination="@id/webView"/>
+    </fragment>
+    <fragment
+            android:id="@+id/webView"
+            android:name="com.jorkoh.transportezaragozakt.destinations.web_view.WebViewFragment">
+        <argument
+                android:name="url"
+                app:argType="string"/>
+        <argument
+                android:name="javascript"
+                app:argType="string"
+                app:nullable="true"
+                android:defaultValue="null"/>
+        <argument
+                android:name="isTwitterTimeline"
+                app:argType="boolean"
+                android:defaultValue="false"/>
     </fragment>
 </navigation>
