Added titles to web views

--- a/app/src/main/res/navigation/more_destination.xml
+++ b/app/src/main/res/navigation/more_destination.xml
@@ -29,8 +29,10 @@
             >
         <argument
                 android:name="url"
-                app:argType="string"
-                />
+                app:argType="string"/>
+        <argument
+                android:name="title"
+                app:argType="string"/>
         <argument
                 android:name="javascript"
                 app:argType="string"
