--- a/app/src/main/res/navigation/favorites_destination.xml
+++ b/app/src/main/res/navigation/favorites_destination.xml
@@ -60,6 +60,9 @@
                 android:name="url"
                 app:argType="string"/>
         <argument
+                android:name="title"
+                app:argType="string"/>
+        <argument
                 android:name="javascript"
                 app:argType="string"
                 app:nullable="true"
