--- a/app/src/main/res/layout/web_view_destination.xml
+++ b/app/src/main/res/layout/web_view_destination.xml
@@ -1,29 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/search_fragment_container"
+        tools:context="com.jorkoh.transportezaragozakt.destinations.web_view.WebViewFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <WebView
-            android:id="@+id/web_view"
-            android:visibility="invisible"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-
-    <com.airbnb.lottie.LottieAnimationView
-            android:id="@+id/loading_web_view_animation"
-            android:visibility="invisible"
-            android:layout_width="wrap_content"
+    <com.google.android.material.appbar.AppBarLayout
             android:layout_height="wrap_content"
-            app:lottie_rawRes="@raw/loading_lottie"
-            app:lottie_loop="true"
-            app:lottie_autoPlay="true"
-            android:scaleType="centerCrop"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_width="match_parent">
+
+        <androidx.appcompat.widget.Toolbar
+                android:id="@id/fragment_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="?attr/actionBarSize"
+                android:theme="@style/ActionBarTheme"/>
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <WebView
+                android:id="@+id/web_view"
+                android:visibility="invisible"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+        <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/loading_web_view_animation"
+                android:visibility="invisible"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:lottie_rawRes="@raw/loading_lottie"
+                app:lottie_loop="true"
+                app:lottie_autoPlay="true"
+                android:scaleType="centerCrop"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
