--- a/app/src/main/res/layout/line_details_destination.xml
+++ b/app/src/main/res/layout/line_details_destination.xml
@@ -4,38 +4,60 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
+        tools:context="com.jorkoh.transportezaragozakt.destinations.line_details.LineDetailsFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="com.jorkoh.transportezaragozakt.destinations.line_details.LineDetailsFragment">
+        android:layout_height="match_parent">
+
+    <com.google.android.material.appbar.AppBarLayout
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent">
+
+        <androidx.appcompat.widget.Toolbar
+                android:id="@id/fragment_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="?attr/actionBarSize"
+                android:theme="@style/ActionBarTheme"/>
+
+    </com.google.android.material.appbar.AppBarLayout>
 
     <FrameLayout
             android:id="@+id/map_fragment_container_line"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-    </FrameLayout>
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
-    <FrameLayout
-            android:id="@+id/line_details_bottom_sheet"
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:layout_width="match_parent"
-            android:background="@drawable/rounded_dialog"
             android:layout_height="wrap_content"
-            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
-            app:behavior_hideable="false"
-            app:layout_insetEdge="bottom"
-            app:behavior_peekHeight="160dp">
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <androidx.viewpager.widget.ViewPager
-                android:id="@+id/line_details_viewpager"
+        <FrameLayout
+                android:id="@+id/line_details_bottom_sheet"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:background="@drawable/rounded_dialog"
+                android:layout_height="wrap_content"
+                app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
+                app:behavior_hideable="false"
+                app:layout_insetEdge="bottom"
+                app:behavior_peekHeight="160dp">
 
-            <com.google.android.material.tabs.TabLayout
-                    android:id="@+id/line_details_tab_layout"
-                    app:tabMaxWidth="0dp"
-                    app:tabGravity="fill"
+            <androidx.viewpager.widget.ViewPager
+                    android:id="@+id/line_details_viewpager"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="match_parent">
 
-        </androidx.viewpager.widget.ViewPager>
-    </FrameLayout>
+                <com.google.android.material.tabs.TabLayout
+                        android:id="@+id/line_details_tab_layout"
+                        app:tabMaxWidth="0dp"
+                        app:tabGravity="fill"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+
+            </androidx.viewpager.widget.ViewPager>
+
+        </FrameLayout>
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
