--- a/app/src/main/res/layout/main_container.xml
+++ b/app/src/main/res/layout/main_container.xml
@@ -3,29 +3,15 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        tools:context="com.jorkoh.transportezaragozakt.MainActivity"
         android:id="@+id/coordinator_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="com.jorkoh.transportezaragozakt.MainActivity">
-
-    <com.google.android.material.appbar.AppBarLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-        <androidx.appcompat.widget.Toolbar
-                android:id="@+id/main_toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:minHeight="?attr/actionBarSize"
-                android:theme="@style/ActionBarTheme"/>
-    </com.google.android.material.appbar.AppBarLayout>
+        android:layout_height="match_parent">
 
     <FrameLayout
             android:id="@+id/nav_host_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
-
+            android:layout_height="match_parent"/>
 
     <View
             android:id="@+id/gap"
@@ -44,7 +30,6 @@
 
     <!-- SHADOW BUGS ON ANDROID 9 :( -->
     <!-- https://issuetracker.google.com/issues/132569416 -->
-    <!-- This is here instead of stop details fragment layout to  -->
     <com.leinardi.android.speeddial.SpeedDialView
             android:id="@+id/stop_details_fab"
             android:layout_width="wrap_content"
@@ -53,4 +38,5 @@
             android:layout_margin="16dp"
             app:sdMainFabClosedSrc="@drawable/ic_add_black_24dp"
             android:visibility="gone"/>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
