--- a/app/src/main/res/layout/stop_details_destination.xml
+++ b/app/src/main/res/layout/stop_details_destination.xml
@@ -2,31 +2,33 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        tools:context="com.jorkoh.transportezaragozakt.destinations.stop_details.StopDetailsFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
     <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/stop_details_appBar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:minHeight="0dp">
+
         <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:id="@+id/stop_details_collapsing_toolbar_layout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 app:contentScrim="?attr/colorPrimary"
                 app:titleEnabled="false"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                 android:theme="@style/ActionBarTheme">
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_marginTop="?attr/actionBarSize"
+                    android:paddingTop="?attr/actionBarSize"
                     android:layout_marginStart="10dp"
                     android:layout_marginEnd="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    app:layout_collapseMode="parallax"
-                    app:layout_collapseParallaxMultiplier="0.5">
+                    android:layout_alignParentTop="true">
 
                 <ImageView
                         android:id="@+id/type_image_stop_details"
@@ -64,11 +66,11 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.appcompat.widget.Toolbar
-                    android:id="@+id/stop_details_toolbar"
+                    android:id="@id/fragment_toolbar"
                     android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    app:layout_collapseMode="pin"
-                    android:theme="@style/ActionBarTheme"/>
+                    android:layout_height="wrap_content"
+                    android:theme="@style/ActionBarTheme"
+                    app:layout_collapseMode="pin"/>
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
