Improved line details map screen real state using dimension resources to change padding depending on orientation

--- a/app/src/main/res/layout/line_details_destination.xml
+++ b/app/src/main/res/layout/line_details_destination.xml
@@ -40,7 +40,7 @@
                 app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
                 app:behavior_hideable="false"
                 app:layout_insetEdge="bottom"
-                app:behavior_peekHeight="160dp">
+                app:behavior_peekHeight="@dimen/line_details_destination_map_view_bottom_padding">
 
             <androidx.viewpager.widget.ViewPager
                     android:id="@+id/line_details_viewpager"
