--- a/app/src/main/res/layout/favorite_row.xml
+++ b/app/src/main/res/layout/favorite_row.xml
@@ -36,7 +36,7 @@
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:id="@+id/type_image_favorite"
-                android:contentDescription="@string/stop_type_content_description"
+                android:contentDescription="@string/stop_type"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
