--- a/app/src/main/res/layout/map_info_window.xml
+++ b/app/src/main/res/layout/map_info_window.xml
@@ -11,7 +11,7 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:id="@+id/type_image_info_window"
-            android:contentDescription="@string/stop_type_content_description"
+            android:contentDescription="@string/stop_type"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="4dp"
             app:layout_constraintTop_toTopOf="parent"
