--- a/app/src/main/res/layout/stop_details_destination.xml
+++ b/app/src/main/res/layout/stop_details_destination.xml
@@ -35,7 +35,7 @@
                         android:layout_width="65dp"
                         android:layout_height="65dp"
                         android:layout_marginBottom="8dp"
-                        android:contentDescription="@string/stop_type_content_description"
+                        android:contentDescription="@string/stop_type"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"/>
