--- a/app/src/main/res/layout/reminder_row.xml
+++ b/app/src/main/res/layout/reminder_row.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<com.google.android.material.card.MaterialCardView
-        xmlns:tools="http://schemas.android.com/tools"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         style="@style/Widget.MaterialComponents.CardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="4dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="4dp"
         app:cardElevation="4dp"
         tools:context=".MainActivity">
 
@@ -22,217 +21,206 @@
         <View
                 android:id="@+id/reminder_color"
                 android:layout_width="10dp"
-                android:background="@android:color/transparent"
-                android:visibility="gone"
+                android:layout_height="0dp"
                 android:layout_marginStart="8dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
-                android:layout_height="0dp"/>
+                android:background="@android:color/transparent"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
                 android:id="@+id/reminder_time_text"
-                android:textColor="?colorOnSurface"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toEndOf="@id/reminder_color"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:textAppearance="@android:style/TextAppearance.Material.Title"
-                android:textSize="24sp"/>
+                android:textColor="?colorOnSurface"
+                android:textSize="24sp"
+                app:layout_constraintStart_toEndOf="@id/reminder_color"
+                app:layout_constraintTop_toTopOf="parent" />
 
         <LinearLayout
                 android:id="@+id/reminder_days_layout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toEndOf="@id/reminder_time_text"
-                app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginStart="16dp"
-                >
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/reminder_time_text"
+                app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.checkbox.MaterialCheckBox
                     android:id="@+id/reminder_monday"
-                    android:textColor="?colorOnBackground"
-                    app:useMaterialThemeColors="true"
-                    android:button="@null"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
-                    android:clickable="false"
                     android:layout_weight="1"
-                    android:textAlignment="center"
+                    android:background="@android:color/transparent"
+                    android:button="@null"
+                    android:clickable="false"
                     android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
-                    android:drawableTint="?colorOnBackground"
-                    android:text="@string/monday_letter"/>
+                    android:text="@string/monday_letter"
+                    android:textAlignment="center"
+                    android:textColor="?colorOnBackground"
+                    app:useMaterialThemeColors="true" />
 
             <com.google.android.material.checkbox.MaterialCheckBox
                     android:id="@+id/reminder_tuesday"
-                    android:textColor="?colorOnBackground"
-                    app:useMaterialThemeColors="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
-                    android:clickable="false"
                     android:layout_weight="1"
+                    android:background="@android:color/transparent"
                     android:button="@null"
-                    android:textAlignment="center"
+                    android:clickable="false"
                     android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
-                    android:drawableTint="?colorOnBackground"
-                    android:text="@string/tuesday_letter"/>
+                    android:text="@string/tuesday_letter"
+                    android:textAlignment="center"
+                    android:textColor="?colorOnBackground"
+                    app:useMaterialThemeColors="true" />
 
             <com.google.android.material.checkbox.MaterialCheckBox
                     android:id="@+id/reminder_wednesday"
-                    android:textColor="?colorOnBackground"
-                    app:useMaterialThemeColors="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
-                    android:clickable="false"
                     android:layout_weight="1"
+                    android:background="@android:color/transparent"
                     android:button="@null"
-                    android:textAlignment="center"
+                    android:clickable="false"
                     android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
-                    android:drawableTint="?colorOnBackground"
-                    android:text="@string/wednesday_letter"/>
+                    android:text="@string/wednesday_letter"
+                    android:textAlignment="center"
+                    android:textColor="?colorOnBackground"
+                    app:useMaterialThemeColors="true" />
 
             <com.google.android.material.checkbox.MaterialCheckBox
                     android:id="@+id/reminder_thursday"
-                    android:textColor="?colorOnBackground"
-                    app:useMaterialThemeColors="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
-                    android:clickable="false"
                     android:layout_weight="1"
+                    android:background="@android:color/transparent"
                     android:button="@null"
-                    android:textAlignment="center"
+                    android:clickable="false"
                     android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
-                    android:drawableTint="?colorOnBackground"
-                    android:text="@string/thursday_letter"/>
+                    android:text="@string/thursday_letter"
+                    android:textAlignment="center"
+                    android:textColor="?colorOnBackground"
+                    app:useMaterialThemeColors="true" />
 
             <com.google.android.material.checkbox.MaterialCheckBox
                     android:id="@+id/reminder_friday"
-                    android:textColor="?colorOnBackground"
-                    app:useMaterialThemeColors="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
-                    android:clickable="false"
                     android:layout_weight="1"
+                    android:background="@android:color/transparent"
                     android:button="@null"
-                    android:textAlignment="center"
+                    android:clickable="false"
                     android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
-                    android:drawableTint="?colorOnBackground"
-                    android:text="@string/friday_letter"/>
+                    android:text="@string/friday_letter"
+                    android:textAlignment="center"
+                    android:textColor="?colorOnBackground"
+                    app:useMaterialThemeColors="true" />
 
             <com.google.android.material.checkbox.MaterialCheckBox
                     android:id="@+id/reminder_saturday"
-                    android:textColor="?colorOnBackground"
-                    app:useMaterialThemeColors="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
-                    android:clickable="false"
                     android:layout_weight="1"
+                    android:background="@android:color/transparent"
                     android:button="@null"
-                    android:textAlignment="center"
+                    android:clickable="false"
                     android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
-                    android:drawableTint="?colorOnBackground"
-                    android:text="@string/saturday_letter"/>
+                    android:text="@string/saturday_letter"
+                    android:textAlignment="center"
+                    android:textColor="?colorOnBackground"
+                    app:useMaterialThemeColors="true" />
 
             <com.google.android.material.checkbox.MaterialCheckBox
                     android:id="@+id/reminder_sunday"
-                    android:textColor="?colorOnBackground"
-                    app:useMaterialThemeColors="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
-                    android:clickable="false"
                     android:layout_weight="1"
+                    android:background="@android:color/transparent"
                     android:button="@null"
-                    android:textAlignment="center"
+                    android:clickable="false"
                     android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
-                    android:drawableTint="?colorOnBackground"
-                    android:text="@string/sunday_letter"/>
+                    android:text="@string/sunday_letter"
+                    android:textAlignment="center"
+                    android:textColor="?colorOnBackground"
+                    app:useMaterialThemeColors="true" />
         </LinearLayout>
 
         <ImageView
+                android:id="@+id/type_image_reminder"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:id="@+id/type_image_reminder"
-                android:contentDescription="@string/stop_type"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
+                android:contentDescription="@string/stop_type"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@id/reminder_color"
-                app:layout_constraintTop_toBottomOf="@id/reminder_time_text"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintTop_toBottomOf="@id/reminder_time_text" />
 
         <TextView
                 android:id="@+id/title_text_reminder"
-                android:textColor="?colorOnSurface"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@id/reminder_days_layout"
-                app:layout_constraintStart_toEndOf="@+id/type_image_reminder"
-                android:textAppearance="@android:style/TextAppearance.Material.Title"
+                android:layout_marginEnd="16dp"
+                android:ellipsize="end"
                 android:gravity="center"
                 android:maxLines="2"
-                android:ellipsize="end"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
+                android:textAppearance="@android:style/TextAppearance.Material.Title"
+                android:textColor="?colorOnSurface"
+                android:textSize="18sp"
                 app:layout_constraintEnd_toStartOf="@+id/edit_view_reminder"
-                android:textSize="18sp"/>
+                app:layout_constraintStart_toEndOf="@+id/type_image_reminder"
+                app:layout_constraintTop_toBottomOf="@id/reminder_days_layout" />
 
         <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/edit_view_reminder"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
-                android:paddingStart="8dp"
-                android:paddingEnd="8dp"
-                android:paddingTop="12dp"
-                android:paddingBottom="4dp"
-                app:layout_constraintTop_toBottomOf="@id/reminder_days_layout"
-                app:layout_constraintBottom_toTopOf="@id/reorder_view_reminder"
-                app:layout_constraintEnd_toEndOf="parent"
                 android:background="@android:color/transparent"
                 android:drawableBottom="@drawable/ic_edit_black_24dp"
-                android:id="@+id/edit_view_reminder"
-                />
+                android:paddingStart="8dp"
+                android:paddingTop="12dp"
+                android:paddingEnd="8dp"
+                android:paddingBottom="4dp"
+                app:layout_constraintBottom_toTopOf="@id/reorder_view_reminder"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/reminder_days_layout" />
 
         <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/reorder_view_reminder"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
-                android:paddingStart="8dp"
-                android:paddingEnd="8dp"
-                android:paddingTop="4dp"
-                android:paddingBottom="12dp"
-                app:layout_constraintTop_toBottomOf="@id/edit_view_reminder"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
                 android:background="@android:color/transparent"
                 android:drawableBottom="@drawable/ic_reorder_black_24dp"
-                android:id="@+id/reorder_view_reminder"
-                />
-
+                android:paddingStart="8dp"
+                android:paddingTop="4dp"
+                android:paddingEnd="8dp"
+                android:paddingBottom="12dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/edit_view_reminder" />
 
         <GridLayout
-                android:layout_width="0dp"
-                android:columnCount="7"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toEndOf="@+id/type_image_reminder"
-                app:layout_constraintEnd_toStartOf="@+id/edit_view_reminder"
-                app:layout_constraintTop_toBottomOf="@+id/title_text_reminder"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:orientation="horizontal"
                 android:id="@+id/lines_layout_favorite"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
+                android:layout_marginTop="4dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginTop="4dp"/>
+                android:columnCount="7"
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/edit_view_reminder"
+                app:layout_constraintStart_toEndOf="@+id/type_image_reminder"
+                app:layout_constraintTop_toBottomOf="@+id/title_text_reminder" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
