Fixed crash when trying to navigate from stop details to line details on nightly bus lines, accessibility stuff

--- a/app/src/main/res/layout/map_extra_controls.xml
+++ b/app/src/main/res/layout/map_extra_controls.xml
@@ -21,6 +21,7 @@
             android:layout_margin="8dp"
             android:id="@+id/traffic_button"
             android:src="@drawable/ic_traffic_black_24dp"
+            android:contentDescription="@string/traffic_layer_description"
             android:background="@drawable/mapbutton_background"/>
 
     <androidx.appcompat.widget.AppCompatImageButton
@@ -30,6 +31,7 @@
             android:layout_margin="8dp"
             android:id="@+id/map_type_button"
             android:src="@drawable/ic_satellite_black_24dp"
+            android:contentDescription="@string/map_type_description"
             android:background="@drawable/mapbutton_background"/>
 
 </LinearLayout>
