--- a/app/src/main/res/layout/map_filters.xml
+++ b/app/src/main/res/layout/map_filters.xml
@@ -17,6 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/bus_chip"
+            android:contentDescription="@string/bus_chip_description"
             android:textAppearance="@android:style/TextAppearance.Material.Widget"
             app:chipIconVisible="true"
             app:checkedIconVisible="false"
@@ -28,6 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/tram_chip"
+            android:contentDescription="@string/tram_chip_description"
             android:textAppearance="@android:style/TextAppearance.Material.Widget"
             app:chipIconVisible="true"
             app:checkedIconVisible="false"
