--- a/app/src/main/res/layout/reminder_row.xml
+++ b/app/src/main/res/layout/reminder_row.xml
@@ -193,6 +193,7 @@
                 android:layout_height="48dp"
                 android:background="@android:color/transparent"
                 android:drawableBottom="@drawable/ic_edit_black_24dp"
+                android:contentDescription="@string/edit"
                 android:paddingStart="8dp"
                 android:paddingTop="12dp"
                 android:paddingEnd="8dp"
@@ -207,6 +208,7 @@
                 android:layout_height="48dp"
                 android:background="@android:color/transparent"
                 android:drawableBottom="@drawable/ic_reorder_black_24dp"
+                android:contentDescription="@string/rearrange"
                 android:paddingStart="8dp"
                 android:paddingTop="4dp"
                 android:paddingEnd="8dp"
