Added rural trackings to map marker clustering system. Added rural filter chip to map. Modified clustering algorithm and renderer to hide markers depending on the filter instead of adding/removing to the cluster manager. Modified clustering algorithm to remove multiple items more efficiently. Improved map marker clearing logic.

--- a/app/src/main/res/layout/map_filters.xml
+++ b/app/src/main/res/layout/map_filters.xml
@@ -34,4 +34,16 @@
             app:chipIconVisible="true"
             app:checkedIconVisible="false"
             app:chipIcon="@drawable/animation_chip"/>
+
+    <com.google.android.material.chip.Chip
+            style="@style/CustomChipChoice"
+            android:id="@+id/rural_chip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/rural_chip"
+            android:contentDescription="@string/rural_chip_description"
+            android:textAppearance="@android:style/TextAppearance.Material.Widget"
+            app:chipIconVisible="true"
+            app:checkedIconVisible="false"
+            app:chipIcon="@drawable/animation_chip"/>
 </com.google.android.material.chip.ChipGroup>
