--- a/app/src/main/res/layout/map_filters.xml
+++ b/app/src/main/res/layout/map_filters.xml
@@ -6,8 +6,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="56dp"
+        android:layout_marginEnd="56dp"
         android:layout_marginTop="4dp"
         android:layout_gravity="top"
+        android:background="@color/kinda_black"
         style="@style/Widget.MaterialComponents.ChipGroup"
         app:chipSpacingHorizontal="8dp">
 
